# treasurenet

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/mobile/: .env.example  app.json  package.json  tsconfig.json
apps/mobile/src/hooks/: useAuth.ts  useMobileWallet.ts
apps/mobile/src/lib/: api.ts  wallet.ts
apps/mobile/src/navigation/: AppNavigator.tsx
apps/mobile/src/screens/: HuntsScreen.tsx  LeaderboardScreen.tsx  MapScreen.tsx  ProfileScreen.tsx  WalletScreen.tsx
apps/server/: .env.example  package.json  tsconfig.build.json  tsconfig.json
apps/server/src/: app.module.ts  main.ts
apps/server/src/analytics/: analytics.controller.ts  analytics.service.ts
apps/server/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts  wallet-auth.guard.ts
apps/server/src/common/: common.module.ts  prisma.module.ts  redis.module.ts  stellar.service.ts  tenant.middleware.ts
apps/server/src/escrow/: escrow.controller.ts  escrow.service.ts
apps/server/src/game/: game.gateway.ts  (+3 more)
apps/web/: next.config.js  package.json  tailwind.config.js  tsconfig.json
contracts/: Cargo.toml  Makefile
contracts/player-registry/: Cargo.toml
contracts/player-registry/src/: lib.rs  test.rs
contracts/soulbound-token/: Cargo.toml
contracts/soulbound-token/src/: lib.rs  test.rs
contracts/treasure-hunt/: Cargo.toml
contracts/treasure-hunt/src/: lib.rs  test.rs
docker/: server.Dockerfile  web.Dockerfile
scripts/: admin.js  setup.sh
(+28 files in other folders)
