[workspace]
resolver = "2"
members = [
    "treasure-hunt",
    "soulbound-token",
    "player-registry",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.82"

[workspace.dependencies]
soroban-sdk = "27.0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
